--- a/makarna/style.css
+++ b/makarna/style.css
@@ -18,7 +18,8 @@ body{
     background-repeat : no-repeat;
     background-attachment: fixed;
     background-size: 100%;
-   
+    
+  
     
 }
 
@@ -30,6 +31,8 @@ header{
     height:auto;
     background: rgba(0, 0, 0, 0.3);
     top: 0;
+    height: 16vh;
+    width: 100vw;
 }  
 
 .ust{
@@ -78,26 +81,29 @@ header{
 
 .orta{
     font-family: 'Playfair', serif;
-    width: 100%;
-    height: auto;
+    height: 79vh;
+    width: 100vw;
     color: rgb(255, 255, 225);
 
 }
 .container{
     display: grid;
-    grid-template-rows: repeat(3, 33.333vh);
+    grid-template-rows: repeat(3, 25.333vh);
     grid-template-columns: repeat(2, 50%);
+  
     
 }
 
 .slogan{
     display: flex;
-    justify-content: center;
+    justify-content:space-around;
     align-items: center;
     color:rgb(255, 255, 225); 
-    font-size: 5rem;
+    font-size: 6vmax;
+    max-width: 40vw;
+   
     
-    text-shadow: 0 0 5px rgb(216, 216, 216),1px 1px 0 black;
+    text-shadow: 0 0 5px rgb(212, 208, 208),1px 1px 0 black;
 }
 /* SAYFA TARİF */
 .container-2{
@@ -163,15 +169,16 @@ header{
 /* SAYFA TARİF */
 
 footer{
-    width: 100%;
-    height: 40px;
-    background: rgba(0, 0, 0, 0.9);
+    height: 5vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.6);
     top: 0;
     
 }
 footer p{
     color:rgb(255, 255, 225); 
     text-align: center;
-    padding-top: 15px;
+    padding-top: 10px;
     font-size: 0.8rem;
+    
 }
